<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.swak</groupId>
	<artifactId>swak</artifactId>
	<version>0.1.2_final</version>
	<packaging>pom</packaging>
	<modules>
		<module>swak-core</module>
		<module>swak-flux</module>
		<module>swak-kotlin</module>
		<module>swak-jdbc</module>
		<module>swak-redis</module>
		<module>swak-http</module>
		<module>swak-actuator</module>
		<module>swak-sample</module>
		<module>swak-starter-web</module>
		<module>swak-rpc</module>
		<module>swak-starter-rpc</module>
		<module>swak-sample-rpc</module>
		<module>swak-groovy</module>
		<module>swak-storage</module>
		<module>swak-motan</module>
		<module>swak-sample-api</module>
		<module>swak-vertx</module>
		<module>swak-starter-vertx</module>
		<module>swak-starter</module>
		<module>swak-sample-vertx</module>
		<module>swak-qrcode</module>
		<module>swak-quartz</module>
		<module>swak-swt</module>
		<module>swak-package</module>
		<module>swak-excel</module>
		<module>swak-wechat</module>
		<module>swak-fx</module>
	</modules>
	<properties>
		<spring-boot.version>2.1.2.RELEASE</spring-boot.version>
		<spring.version>5.1.4.RELEASE</spring.version>
		<cglib.version>3.2.6</cglib.version>
		<javassist.version>3.22.0-GA</javassist.version>
		<fastjson.version>1.2.49</fastjson.version>
		<logback.version>1.2.3</logback.version>
		<slf4j.version>1.7.5</slf4j.version>
		<netty.version>4.1.32.Final</netty.version>
		<micrometer.version>1.1.0</micrometer.version>
		<ehcache.version>2.10.5</ehcache.version>
		<lettuce.version>5.1.3.RELEASE</lettuce.version>
		<kryo.version>4.0.2</kryo.version>
		<kotlin.version>1.3.0</kotlin.version>
		<kotlin.coroutines.version>1.0.0</kotlin.coroutines.version>
		<groovy.version>2.5.4</groovy.version>
		<mybatis.version>3.4.6</mybatis.version>
		<mybatis-spring.version>1.3.2</mybatis-spring.version>
		<druid.version>1.1.6</druid.version>
		<HikariCP.version>3.2.0</HikariCP.version>
		<reactor.version>3.2.2.RELEASE</reactor.version>
		<async.httpclient.version>2.6.0</async.httpclient.version>
		<motan.version>1.1.1</motan.version>
		<vertx.version>3.5.4</vertx.version>
		<qrcode.version>3.3.3</qrcode.version>
		<javapoet.version>1.11.1</javapoet.version>
		<zookeeper.version>3.4.8</zookeeper.version>
		<zkclient.version>0.10</zkclient.version>
		<metrics.version>4.0.2</metrics.version>
		<quartz.version>2.2.3</quartz.version>
		<swt.version>1.0</swt.version>
		<jcef.version>1.0</jcef.version>
		<poi.version>4.0.1</poi.version>
		<guava.version>21.0</guava.version>
		<controlsfx.version>9.0.0</controlsfx.version>
		<jaxb.version>2.3.1</jaxb.version>

		<!-- test -->
		<junit.version>4.12</junit.version>

		<!-- db driver -->
		<sharding.version>3.0.0</sharding.version>
		<mysql-jdbc.version>6.0.6</mysql-jdbc.version>
		<h2-jdbc.version>1.4.197</h2-jdbc.version>
		<sqlite-jdbc.version>3.25.2</sqlite-jdbc.version>

		<!-- other setting -->
		<jdk.version>11</jdk.version>
		<maven.version>3.5.4</maven.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.version>${project.version}</project.version>
	</properties>
	<repositories>
		<repository>
			<id>nexus-repos</id>
			<name>Team Nexus Repository</name>
			<url>http://192.168.0.222:7001/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>oschina-repos</id>
			<name>Oschina Releases</name>
			<url>http://maven.oschina.net/content/groups/public</url>
		</repository>
		<repository>
			<id>aliyun-repos</id>
			<name>Nexus aliyun</name>
			<url>http://maven.aliyun.com/nexus/content/groups/public</url>
		</repository>
	</repositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-http</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-kotlin</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-actuator</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-flux</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-jdbc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-redis</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-storage</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-quartz</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-starter-web</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-rpc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-quartz</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-excel</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-motan</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-wechat</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-vertx</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-starter-rpc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-starter-vertx</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-starter</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- 测试 -->
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-sample-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.swak</groupId>
				<artifactId>swak-sample</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>nexus-releases</id>
			<name>Team Nesus Release Repository</name>
			<url>http://192.168.0.222:7001/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>Team Nesus Snapshot Repository</name>
			<url>http://192.168.0.222:7001/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<!-- 插件配置 -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<failOnError>true</failOnError>
					<verbose>true</verbose>
					<fork>true</fork>
					<compilerArgument>-nowarn</compilerArgument>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
					<include>**/*.tld</include>
					<include>**/*.ftl</include>
					<include>**/*.js</include>
					<include>**/*.json</include>
					<include>**/*.dic</include>
					<include>**/*.conf</include>
					<include>**/*.groovy</include>
					<include>**/*.png</include>
					<include>**/*.factories</include>
					<include>**/*.db</include>
					<include>**/*.jceks</include>
					<include>**/*.html</include>
				</includes>
				<filtering>false</filtering>
			</resource>
		</resources>
	</build>

</project>